[project]
name = "langgraph-task-maistro"
version = "0.1.0"
description = "A personalized AI task management assistant built with LangGraph."
authors = [
    {name = "@pytholic", email = "rajahaseeb147@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "notebook>=7.5.3",
    "trustcall>=0.0.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
